# Maverick_Client_for_Everest

./: .env.local  .gitignore  LAYOUT_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION.md  electron-builder.json  electron-vite.config.ts  favicon-base64.txt  fix-ts-errors.js  git_status.txt  package-lock.json  package.json  tsconfig.json
docs/: MRS_API_Calls.md  Security_Manual.md  maverick_client_electron_stack.txt  maverick_client_security_guide.txt
maverick-ndi/: CMakeLists.txt  README.md  main.cpp
maverick-ndi/local_deps/include/: test.h
src/main/: index.ts  tsconfig.json
src/main/ipc/: secure-handlers.ts
src/main/security/: anti-debug.ts  certificate-pinning.ts  integrity.ts  secure-storage.ts
src/preload/: index.ts  tsconfig.json
src/renderer/: index.html  tsconfig.json
src/renderer/src/: App.tsx  index.css  main.tsx
src/renderer/src/api/: axios.ts  secure-axios.ts  secure-socket.ts  socket.ts
src/renderer/src/components/: CollapsiblePanel.tsx  ConnectPage.tsx  ContextMenu.tsx  ElementsPanel.tsx  FieldEditorPanel.tsx  ImportStatusModal.tsx  Layout.tsx  LogoSpinner.tsx  Menu.tsx  PlayoutConfigModal.tsx  PreviewPanel.tsx  ShowsDialog.tsx  StatusBar.tsx  TemplatesPanel.tsx
src/renderer/src/hooks/: useElementActions.ts  useElements.ts  useNumpad.ts  usePlayout.ts  usePlayoutActions.ts  usePlayoutMeta.ts  usePlayoutMeta_old.ts  usePlayout_old.ts  useSecurity.ts  useShows.ts  useTemplateDetails.ts  useTemplates.ts
src/renderer/src/stores/: channelStore.ts  configStore.ts  connectionStore.ts  layoutStore.ts  ndiStore.ts  selectionStore.ts  showStore.ts
